# plasma6-redshift-control

./: .gitignore  CMakeLists.txt  Messages.sh  README.md  create-plasmoid-package.sh
package/: metadata.json
package/contents/config/: config.qml  main.xml
po/: build.sh  update.sh
po/az/: plasma_applet_org.kde.redshiftControl6.po
po/be/: plasma_applet_org.kde.redshiftControl6.po
po/ca/: plasma_applet_org.kde.redshiftControl6.po
po/ca@valencia/: plasma_applet_org.kde.redshiftControl6.po
po/cs/: plasma_applet_org.kde.redshiftControl6.po
po/da/: plasma_applet_org.kde.redshiftControl6.po
po/de/: plasma_applet_org.kde.redshiftControl6.po
po/el/: plasma_applet_org.kde.redshiftControl6.po
po/en_GB/: plasma_applet_org.kde.redshiftControl6.po
po/es/: plasma_applet_org.kde.redshiftControl6.po
po/et/: plasma_applet_org.kde.redshiftControl6.po
po/eu/: plasma_applet_org.kde.redshiftControl6.po
po/fi/: plasma_applet_org.kde.redshiftControl6.po
po/fr/: plasma_applet_org.kde.redshiftControl6.po
po/gl/: plasma_applet_org.kde.redshiftControl6.po
po/hu/: plasma_applet_org.kde.redshiftControl6.po
po/ia/: plasma_applet_org.kde.redshiftControl6.po
po/it/: plasma_applet_org.kde.redshiftControl6.po
po/ja/: plasma_applet_org.kde.redshiftControl6.po
po/ka/: plasma_applet_org.kde.redshiftControl6.po
po/ko/: plasma_applet_org.kde.redshiftControl6.po
po/lt/: plasma_applet_org.kde.redshiftControl6.po
po/nl/: plasma_applet_org.kde.redshiftControl6.po
po/nn/: plasma_applet_org.kde.redshiftControl6.po
po/pl/: plasma_applet_org.kde.redshiftControl6.po
(+22 files in other folders)
